增加更新弹窗

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
     hosted: https://pub.isar-community.dev/
   package_info_plus:
   flutter_inappwebview:
+  dio:
+  app_installer:
+  
 
 dev_dependencies:
   flutter_test:
