--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: 
+  get:
   envied:
   permission_handler:
   simple_native_image_compress:
@@ -50,7 +50,7 @@ dependencies:
   isar_flutter_libs:
     hosted: https://pub.isar-community.dev/
   package_info_plus:
-  flutter_inappwebview:
+  webview_flutter:
   dio:
   logger:
   cookie_jar:
@@ -72,6 +72,7 @@ dev_dependencies:
   build_runner: 
   flutter_launcher_icons: 
   flutter_native_splash:
+  flutter_gen_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -92,6 +93,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/components/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
