--- a/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
+++ b/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   device_info_plus:
   json_serializable:
   flutter_html:
+  tap_debouncer:
   back_to_desktop:
     git:
       url: https://github.com/Spicely/android_back_to_desktop.git
