--- a/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
+++ b/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
@@ -38,15 +38,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: 5.0.0-release-candidate-9.3.2
+  get: 
   envied:
   permission_handler:
   path:
   path_provider:
-  isar:
-    hosted: https://pub.isar-community.dev/
-  isar_flutter_libs:
-    hosted: https://pub.isar-community.dev/
+  drift:
+  drift_flutter:
   package_info_plus:
   webview_flutter:
   dio:
@@ -72,8 +70,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   envied_generator: 
-  isar_generator:
-    hosted: https://pub.isar-community.dev/
+  drift_dev:
   build_runner: 
   flutter_launcher_icons: 
   flutter_native_splash:
