--- a/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
+++ b/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: 
-  envied:
+  flutter_dotenv:
   permission_handler:
   path:
   path_provider:
@@ -94,6 +94,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
     - assets/components/
   #   - images/a_dot_ham.jpeg
